--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "@eslint/js": "^9.31.0",
     "eslint": "^9.31.0",
     "globals": "^16.3.0"
+  },
+  "dependencies": {
+    "vite": "^7.3.0"
   }
 }
